Enhance Module 3 with guided practice activities for code review and test generation.
- Added a guided practice section for completing the API rate limiting review template in `3.2-code-review-automation.ipynb`, including a structured approach to filling in critical thinking parts.
- Introduced a guided practice for the password reset test plan in `3.3-test-generation-automation.ipynb`, providing a partially complete template to help users identify ambiguities and create test specifications.
- Updated activity instructions to improve clarity and usability, ensuring a more engaging learning experience.

--- a/01-course/module-03-applications/3.2-code-review-automation.ipynb
+++ b/01-course/module-03-applications/3.2-code-review-automation.ipynb
@@ -394,7 +394,176 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "## 🏋️ Activity 3.2: Build Your Code Review Template\n\n<div style=\"background:#dcfce7; border-left:4px solid #22c55e; padding:16px; border-radius:6px; margin:20px 0; color:#000000;\">\n<strong style=\"color:#166534;\">🎯 Your Task:</strong> Create a production-ready code review template using AWS-inspired patterns.<br><br>\n<strong>Time:</strong> 30-40 minutes\n</div>\n\n### 📝 How to Complete This Activity\n\n1. Open **[`activities/activity-3.2-code-review.md`](./activities/activity-3.2-code-review.md)**\n2. Complete the template between the `<!-- TEMPLATE START -->` and `<!-- TEMPLATE END -->` markers\n3. Return here and run the test cell below\n4. Compare with **[solution](./solutions/activity-3.2-code-review-solution.md)** when done\n\n> **💡 What You'll Build:** A multi-dimensional review template that catches security, performance, and quality issues with structured, actionable feedback."
+   "source": [
+    "## 🎯 Guided Practice: Complete the API Rate Limiting Review\n",
+    "\n",
+    "<div style=\"background:#e0f2fe; border-left:4px solid #0284c7; padding:16px; border-radius:6px; margin:20px 0; color:#000000;\">\n",
+    "<strong style=\"color:#075985;\">🏗️ Build with Partial Scaffolding</strong><br><br>\n",
+    "\n",
+    "You just saw a complete worked example. Now practice with a **partially complete template** where you fill in the critical thinking parts. This helps you learn faster than building everything from scratch.\n",
+    "\n",
+    "**Your Task:** Fill in the **⚠️ TODO** sections below.  \n",
+    "**Time:** 10-15 minutes\n",
+    "</div>\n",
+    "\n",
+    "### The Scenario\n",
+    "\n",
+    "An engineer implemented API rate limiting to prevent abuse. Review this code:\n",
+    "\n",
+    "```python\n",
+    "+ import time\n",
+    "+ from collections import defaultdict\n",
+    "+\n",
+    "+ RATE_LIMITS = defaultdict(list)\n",
+    "+\n",
+    "+ def check_rate_limit(api_key, endpoint):\n",
+    "+     now = time.time()\n",
+    "+     \n",
+    "+     requests = RATE_LIMITS[api_key]\n",
+    "+     requests = [t for t in requests if now - t < 60]\n",
+    "+     \n",
+    "+     if len(requests) >= 100:\n",
+    "+         return {\"allowed\": False, \"retry_after\": 60 - (now - requests[0])}\n",
+    "+     \n",
+    "+     requests.append(now)\n",
+    "+     RATE_LIMITS[api_key] = requests\n",
+    "+     \n",
+    "+     return {\"allowed\": True}\n",
+    "```\n",
+    "\n",
+    "**Complete the review template by filling in the ⚠️ TODO sections:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Guided Completion: API Rate Limiting Review\n",
+    "# Fill in the ⚠️ TODO sections below\n",
+    "\n",
+    "rate_limit_code = '''\n",
+    "+ import time\n",
+    "+ from collections import defaultdict\n",
+    "+\n",
+    "+ RATE_LIMITS = defaultdict(list)\n",
+    "+\n",
+    "+ def check_rate_limit(api_key, endpoint):\n",
+    "+     now = time.time()\n",
+    "+     \n",
+    "+     requests = RATE_LIMITS[api_key]\n",
+    "+     requests = [t for t in requests if now - t < 60]\n",
+    "+     \n",
+    "+     if len(requests) >= 100:\n",
+    "+         return {\"allowed\": False, \"retry_after\": 60 - (now - requests[0])}\n",
+    "+     \n",
+    "+     requests.append(now)\n",
+    "+     RATE_LIMITS[api_key] = requests\n",
+    "+     \n",
+    "+     return {\"allowed\": True}\n",
+    "'''\n",
+    "\n",
+    "# ✅ PROVIDED: Role and Context (Study these)\n",
+    "completion_template = f'''\n",
+    "<role>\n",
+    "Act as a Senior Software Engineer specializing in Python backend services with expertise in API security and distributed systems.\n",
+    "</role>\n",
+    "\n",
+    "<context>\n",
+    "Repository: api-gateway\n",
+    "Service: Rate Limiting Middleware\n",
+    "Purpose: Add rate limiting to prevent API abuse\n",
+    "Language: python\n",
+    "</context>\n",
+    "\n",
+    "<code_diff>\n",
+    "{rate_limit_code}\n",
+    "</code_diff>\n",
+    "\n",
+    "<review_guidelines>\n",
+    "⚠️ TODO: Fill in what to check. Consider:\n",
+    "- What security risks does in-memory rate limiting have?\n",
+    "- What happens in distributed systems (multiple servers)?\n",
+    "- What performance issues could arise?\n",
+    "- What edge cases exist (clock skew, key collisions)?\n",
+    "\n",
+    "Your answer:\n",
+    "1. Security — [YOUR CONCERNS HERE]\n",
+    "2. Reliability — [YOUR CONCERNS HERE]  \n",
+    "3. Performance — [YOUR CONCERNS HERE]\n",
+    "4. Distributed Systems — [YOUR CONCERNS HERE]\n",
+    "</review_guidelines>\n",
+    "\n",
+    "<tasks>\n",
+    "1. Think through the change and note risks.\n",
+    "2. Analyse the code against the review guidelines you defined above.\n",
+    "3. Suggest fixes with concrete recommendations.\n",
+    "4. Deliver a final verdict (approve, needs work, block).\n",
+    "</tasks>\n",
+    "\n",
+    "<output_format>\n",
+    "⚠️ TODO: Define your output structure. What severity levels will you use?\n",
+    "What categories? What should each finding include?\n",
+    "\n",
+    "Your format:\n",
+    "## Summary\n",
+    "[YOUR FORMAT HERE]\n",
+    "\n",
+    "## Findings\n",
+    "[YOUR FORMAT HERE]\n",
+    "\n",
+    "## Verdict\n",
+    "[YOUR FORMAT HERE]\n",
+    "</output_format>\n",
+    "'''\n",
+    "\n",
+    "# Run this after you've filled in the ⚠️ TODOs above\n",
+    "print(\"🧪 GUIDED COMPLETION: API RATE LIMITING REVIEW\")\n",
+    "print(\"=\" * 70)\n",
+    "print(\"📋 YOUR TEMPLATE (with ⚠️ TODOs filled in):\")\n",
+    "print(\"=\" * 70)\n",
+    "print(completion_template)\n",
+    "print(\"=\" * 70)\n",
+    "print(\"\\n🤖 AI REVIEW:\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "messages = [\n",
+    "    {\"role\": \"system\", \"content\": \"You follow structured review templates and produce clear, actionable findings.\"},\n",
+    "    {\"role\": \"user\", \"content\": completion_template}\n",
+    "]\n",
+    "\n",
+    "review = get_chat_completion(messages, temperature=0.0)\n",
+    "print(review)\n",
+    "print(\"=\" * 70)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🏋️ Activity 3.2: Build Your Code Review Template\n",
+    "\n",
+    "<div style=\"background:#dcfce7; border-left:4px solid #22c55e; padding:16px; border-radius:6px; margin:20px 0; color:#000000;\">\n",
+    "<strong style=\"color:#166534;\">🎯 Your Task:</strong> Create a production-ready code review template from scratch.<br><br>\n",
+    "<strong>Time:</strong> 30-40 minutes\n",
+    "</div>\n",
+    "\n",
+    "### 📚 Your Learning Journey\n",
+    "\n",
+    "**Step 1: Worked Example** ✅ - You studied the monthly report review  \n",
+    "**Step 2: Guided Completion** ✅ - You completed the API rate limiting template  \n",
+    "**Step 3: Independent Practice** ⬅️ **You are here** - Build authentication review from scratch\n",
+    "\n",
+    "### 📝 How to Complete This Activity\n",
+    "\n",
+    "1. Open **[`activities/activity-3.2-code-review.md`](./activities/activity-3.2-code-review.md)**\n",
+    "2. Complete the template between the `<!-- TEMPLATE START -->` and `<!-- TEMPLATE END -->` markers\n",
+    "3. Return here and run the test cell below\n",
+    "4. Compare with **[solution](./solutions/activity-3.2-code-review-solution.md)** when done\n",
+    "\n",
+    "> **💡 What You'll Build:** A multi-dimensional review template for authentication code that catches security, performance, and quality issues."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -440,7 +609,7 @@
    "outputs": [],
    "source": [
     "# Test your Activity 3.2 template\n",
-    "\n",
+    "from setup_utils import test_activity_3_2\n",
     "# This is the vulnerable authentication code from the activity\n",
     "test_code = \"\"\"\n",
     "+ import hashlib\n",
@@ -492,7 +661,7 @@
     "# 2. Substitute the variables\n",
     "# 3. Send to the AI model\n",
     "# 4. Display the results\n",
-    "# 5. Ask if you want to save results back to the activity file\n"
+    "# 5. Ask if you want to save results back to the activity file"
    ]
   },
   {
