--- a/01-course/module-03-applications/3.3-test-generation-automation.ipynb
+++ b/01-course/module-03-applications/3.3-test-generation-automation.ipynb
@@ -353,12 +353,161 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 🎯 Guided Practice: Complete the Password Reset Test Plan\n",
+    "\n",
+    "<div style=\"background:#e0f2fe; border-left:4px solid #0284c7; padding:16px; border-radius:6px; margin:20px 0; color:#000000;\">\n",
+    "<strong style=\"color:#075985;\">🏗️ Build with Partial Scaffolding</strong><br><br>\n",
+    "\n",
+    "You just saw a complete worked example. Now practice with a **partially complete template** where you fill in the critical thinking parts. This helps you learn faster than building everything from scratch.\n",
+    "\n",
+    "**Your Task:** Fill in the **⚠️ TODO** sections below.  \n",
+    "**Time:** 10-15 minutes\n",
+    "</div>\n",
+    "\n",
+    "### The Scenario\n",
+    "\n",
+    "Your team needs to test a password reset feature. Here are the vague requirements:\n",
+    "\n",
+    "**Requirements:**\n",
+    "1. Users can request password reset via email\n",
+    "2. Reset link expires after \"some time\"\n",
+    "3. Link can only be used once\n",
+    "4. New password must be \"secure\"\n",
+    "5. User receives email confirmation after reset\n",
+    "\n",
+    "**Existing Tests:**\n",
+    "- `test_send_reset_email()` - Verifies email is sent\n",
+    "\n",
+    "**Complete the test generation template by filling in the ⚠️ TODO sections:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Guided Completion: Password Reset Test Generation\n",
+    "# Fill in the ⚠️ TODO sections below\n",
+    "\n",
+    "password_reset_requirements = \"\"\"\n",
+    "Password Reset Feature Requirements:\n",
+    "1. Users can request password reset via email\n",
+    "2. Reset link expires after \"some time\"\n",
+    "3. Link can only be used once\n",
+    "4. New password must be \"secure\"\n",
+    "5. User receives email confirmation after reset\n",
+    "\"\"\"\n",
+    "\n",
+    "existing_tests = \"\"\"\n",
+    "Current test suite:\n",
+    "- test_send_reset_email() - Verifies email is sent with reset link\n",
+    "\"\"\"\n",
+    "\n",
+    "# ✅ PROVIDED: Command Summary and System Inputs (Study these)\n",
+    "completion_template = f\"\"\"\n",
+    "<command_summary>\n",
+    "Command: Generate comprehensive test plan for password reset feature.\n",
+    "Primary Objective: Identify ambiguities and create test specifications before implementation.\n",
+    "Success Signals:\n",
+    "- Security and expiration edge cases are covered.\n",
+    "- Ambiguities in requirements are surfaced for PM clarification.\n",
+    "- Unit and integration tests are clearly separated.\n",
+    "</command_summary>\n",
+    "\n",
+    "<system_inputs>\n",
+    "<ProjectOverview>\n",
+    "Domain: User authentication system\n",
+    "Project: Password Reset Flow\n",
+    "Test Framework: pytest\n",
+    "Tech Stack: Python, Flask, PostgreSQL, SendGrid\n",
+    "</ProjectOverview>\n",
+    "\n",
+    "<FunctionalRequirements>\n",
+    "{password_reset_requirements}\n",
+    "</FunctionalRequirements>\n",
+    "\n",
+    "<ExistingTests>\n",
+    "{existing_tests}\n",
+    "</ExistingTests>\n",
+    "</system_inputs>\n",
+    "\n",
+    "<reasoning_checklist>\n",
+    "⚠️ TODO: Define what the model should analyze. Consider:\n",
+    "- What ambiguities exist in these requirements?\n",
+    "  - What does \"some time\" mean for expiration?\n",
+    "  - What makes a password \"secure\"?\n",
+    "  - Can users request multiple resets?\n",
+    "- What security edge cases must be tested?\n",
+    "- What happens when things fail (email service down, expired tokens)?\n",
+    "\n",
+    "Your checklist:\n",
+    "1. [YOUR STEP HERE - e.g., \"Identify ambiguous requirements\"]\n",
+    "2. [YOUR STEP HERE - e.g., \"List security-critical scenarios\"]\n",
+    "3. [YOUR STEP HERE - e.g., \"Map edge cases to unit vs integration tests\"]\n",
+    "4. [YOUR STEP HERE]\n",
+    "</reasoning_checklist>\n",
+    "\n",
+    "<output_contract>\n",
+    "⚠️ TODO: Define your test plan structure. What sections do you need?\n",
+    "\n",
+    "Your output format:\n",
+    "## Summary\n",
+    "[YOUR FORMAT]\n",
+    "\n",
+    "## Ambiguities & Follow-ups  \n",
+    "[YOUR FORMAT - What questions for the PM?]\n",
+    "\n",
+    "## Coverage Map\n",
+    "[YOUR FORMAT - What scenarios are missing?]\n",
+    "\n",
+    "## Unit Tests\n",
+    "[YOUR FORMAT - What should each test include?]\n",
+    "\n",
+    "## Integration Tests\n",
+    "[YOUR FORMAT - What end-to-end flows?]\n",
+    "\n",
+    "## Test Data & Tooling\n",
+    "[YOUR FORMAT]\n",
+    "</output_contract>\n",
+    "\"\"\"\n",
+    "\n",
+    "# Run this after you've filled in the ⚠️ TODOs above\n",
+    "print(\"🧪 GUIDED COMPLETION: PASSWORD RESET TEST GENERATION\")\n",
+    "print(\"=\" * 70)\n",
+    "print(\"📋 YOUR TEMPLATE (with ⚠️ TODOs filled in):\")\n",
+    "print(\"=\" * 70)\n",
+    "print(completion_template)\n",
+    "print(\"=\" * 70)\n",
+    "print(\"\\n🤖 AI-GENERATED TEST PLAN:\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "messages = [\n",
+    "    {\"role\": \"system\", \"content\": \"You follow structured QA templates and produce detailed, automation-ready test plans.\"},\n",
+    "    {\"role\": \"user\", \"content\": completion_template}\n",
+    "]\n",
+    "\n",
+    "test_plan = get_chat_completion(messages, temperature=0.0)\n",
+    "print(test_plan)\n",
+    "print(\"=\" * 70)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 🏋️ Activity 3.3: Build Your Test Generation Template\n",
     "\n",
-    "<div style=\"background:#dcfce7; border-left:4px solid #22c55e; padding:16px; border-radius:6px; margin:20px 0; color:#065f46;\">\n",
-    "<strong style=\"color:#166534;\">🎯 Your Task:</strong> Create a test generation template for a shopping cart discount system with intentionally vague requirements.<br><br>\n",
+    "<div style=\"background:#dcfce7; border-left:4px solid #22c55e; padding:16px; border-radius:6px; margin:20px 0; color:#000000;\">\n",
+    "<strong style=\"color:#166534;\">🎯 Your Task:</strong> Create a test generation template from scratch for a shopping cart discount system.<br><br>\n",
     "<strong>Time:</strong> 30-40 minutes\n",
     "</div>\n",
+    "\n",
+    "### 📚 Your Learning Journey\n",
+    "\n",
+    "**Step 1: Worked Example** ✅ - You studied the payment service test generation  \n",
+    "**Step 2: Guided Completion** ✅ - You completed the password reset template  \n",
+    "**Step 3: Independent Practice** ⬅️ **You are here** - Build discount system tests from scratch\n",
     "\n",
     "### 📝 How to Complete This Activity\n",
     "\n",
@@ -402,7 +551,7 @@
    "outputs": [],
    "source": [
     "# Test your Activity 3.3 template\n",
-    "\n",
+    "from setup_utils import test_activity_3_3\n",
     "# Shopping Cart Discount System requirements (intentionally vague!)\n",
     "discount_requirements = \"\"\"\n",
     "Feature: Shopping Cart Discount System\n",
