Update `3.3-test-generation-automation.ipynb` and `3.4-llm-as-judge-evaluation.ipynb` for improved clarity and formatting. Added a newline for better readability in the test generation notebook and removed an outdated reference in the evaluation notebook, streamlining content for enhanced user experience.

--- a/01-course/module-03-applications/3.4-llm-as-judge-evaluation.ipynb
+++ b/01-course/module-03-applications/3.4-llm-as-judge-evaluation.ipynb
@@ -555,8 +555,7 @@
     "- [LLM-as-a-judge on Amazon Bedrock Model Evaluation](https://aws.amazon.com/blogs/machine-learning/llm-as-a-judge-on-amazon-bedrock-model-evaluation/) - How to implement and use LLM-as-a-judge capability within Amazon Bedrock Model Evaluation\n",
     "- [Anthropic: Using the Evaluation Tool](https://docs.claude.com/en/docs/test-and-evaluate/eval-tool) - Evaluate prompts in the developer console.\n",
     "- [OpenAI Docs: Graders](https://platform.openai.com/docs/guides/graders) - Graders are a way to evaluate your model's performance against reference answers.\n",
-    "- [OpenAI DevDay 2024 | Balancing accuracy, latency, and cost at scale](https://youtu.be/Bx6sUDRMx-8) — LLM optimization\n",
-    "- [Session 1 Recap](../../session_1_introduction_and_basics.ipynb) - Revisit why automated metrics alone miss hallucinations."
+    "- [OpenAI DevDay 2024 | Balancing accuracy, latency, and cost at scale](https://youtu.be/Bx6sUDRMx-8) — LLM optimization"
    ]
   },
   {
