Enhance Module 2 notebook with comprehensive guidelines for working with external documentation in IDEs. Updated best practices for structuring documents with XML tags and added detailed examples for effective context provision. Revised the "Try It Yourself" section to clarify misconceptions about AI's handling of documentation, emphasizing the importance of quote extraction to prevent hallucinations. Improved overall clarity and organization of content.

--- a/01-course/module-02-fundamentals/module2.ipynb
+++ b/01-course/module-02-fundamentals/module2.ipynb
@@ -1839,12 +1839,77 @@
     "\n",
     "**Best Practices for Long Context:**\n",
     "- **Put longform data at the top:** Place long documents (~20K+ tokens) near the top of your prompt, above queries and instructions (can improve response quality by up to 30%)\n",
-    "- **Structure with XML tags:** Use `<document>`, `<source>`, and `<document_content>` tags to organize multiple documents\n",
+    "- **Structure with XML tags:** Use `<documents>`, `<document>`, `<source>`, and `<document_content>` tags to organize multiple documents\n",
     "- **Request quotes first:** Ask the AI to extract relevant quotes in `<quotes>` tags before generating the final response\n",
+    "\n",
+    "**Working with External Documentation in IDEs:**\n",
+    "\n",
+    "When using AI coding assistants like **GitHub Copilot**, **Claude Code**, or **OpenAI Codex**, you often need to reference documentation outside your codebase. Here's how to provide context effectively:\n",
+    "\n",
+    "**1. Structure documents with XML tags (Recommended):**\n",
+    "\n",
+    "Use this format for local files or external documentation. Keep a `docs/` folder with frequently-used references:\n",
+    "- `docs/api-conventions.md` - Your team's API standards\n",
+    "- `docs/external-apis/stripe.md` - Third-party API summaries  \n",
+    "- `docs/architecture.md` - System design decisions\n",
+    "- `docs/error-codes.md` - Standard error codes and handling\n",
+    "\n",
+    "Then reference them in your prompts:\n",
+    "\n",
+    "```xml\n",
+    "<documents>\n",
+    "  <document index=\"1\">\n",
+    "    <source>docs/api-guide.md</source>\n",
+    "    <document_content>\n",
+    "    # Stripe Payment API\n",
+    "    POST /v1/payment_intents\n",
+    "    Creates a PaymentIntent object.\n",
+    "    \n",
+    "    Required fields:\n",
+    "    - amount (integer): Amount in cents\n",
+    "    - currency (string): 3-letter ISO code\n",
+    "    </document_content>\n",
+    "  </document>\n",
+    "  \n",
+    "  <document index=\"2\">\n",
+    "    <source>docs/authentication.md</source>\n",
+    "    <document_content>\n",
+    "    Authentication uses Bearer tokens in the Authorization header.\n",
+    "    Example: Authorization: Bearer sk_test_abc123\n",
+    "    </document_content>\n",
+    "  </document>\n",
+    "</documents>\n",
+    "\n",
+    "Based on the documentation above, implement a payment creation function.\n",
+    "```\n",
+    "\n",
+    "**2. IDE-specific file shortcuts:**\n",
+    "- **GitHub Copilot Chat:** Use `#file:docs/api-guide.md` to quickly reference specific files\n",
+    "- **Claude Code:** Use `@filename` (e.g., `@docs/api-guide.md`) or open files in your editor as context\n",
+    "- **VS Code with Copilot:** Use `@workspace` or keep documentation files open in tabs\n",
+    "\n",
+    "**3. Reference external URLs with key excerpts:**\n",
+    "\n",
+    "For web documentation, extract and structure the relevant parts:\n",
+    "\n",
+    "```xml\n",
+    "<document>\n",
+    "  <source>https://docs.stripe.com/api/payment_intents</source>\n",
+    "  <document_content>\n",
+    "  Key requirements:\n",
+    "  - Authentication: Bearer token in Authorization header  \n",
+    "  - amount must be in cents (e.g., $10.00 = 1000)\n",
+    "  - currency must be 3-letter ISO code\n",
+    "  - Successful response returns 200 with payment_intent object\n",
+    "  </document_content>\n",
+    "</document>\n",
+    "```\n",
+    "\n",
+    "**Pro Tip:** Maintain local markdown summaries of frequently-used external APIs in your repo. This gives AI assistants grounded reference material and prevents hallucination of API details.\n",
     "\n",
     "Code review with large codebases, documentation generation from source files, security audit reports, and analyzing API documentation all become more effective with proper citations.\n",
     "\n",
-    "*Reference: [Claude Documentation - Long Context Tips](https://docs.claude.com/en/docs/build-with-claude/prompt-engineering/long-context-tips)*\n"
+    "*Reference: [Claude Documentation - Long Context Tips](https://docs.claude.com/en/docs/build-with-claude/prompt-engineering/long-context-tips)*"
    ]
   },
   {
@@ -2057,70 +2122,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "### 🎯 Try It Yourself: Reference Citations\n",
-    "\n",
-    "**Common Misconception:** AI perfectly remembers and uses all information from long documents.\n",
-    "\n",
-    "**The Reality:** Extracting quotes first forces AI to find and focus on relevant information, reducing hallucinations.\n",
-    "\n",
-    "**Your Task:** You have API documentation below. The bad prompt asks for implementation directly. Fix it by:\n",
-    "1. First requesting quote extraction in `<quotes>` tags\n",
-    "2. Then using those quotes for implementation\n",
-    "3. Structure the documentation with `<document>` tags\n",
-    "\n",
-    "This two-step approach grounds responses in actual docs!"
-   ]
+   "source": "---\n\n### 🎯 Try It Yourself: Reference Citations\n\n**Common Misconception:** AI can accurately implement APIs from general knowledge without documentation.\n\n**The Reality:** Without reference citations, AI invents plausible-sounding but incorrect details. Quote extraction grounds responses in actual documentation.\n\n**Documentation Setup:**\n\nThis exercise uses actual documentation files in the `docs/` directory:\n```\nmodule-02-fundamentals/\n├── docs/\n│   ├── stripe-api-guide.md       # API endpoint details, required fields\n│   └── stripe-authentication.md  # Authentication methods, security\n└── module2.ipynb\n```\n\n**Your Task:** Compare two approaches to the same task:\n\n**Bad approach (without citations):**\n- Vague prompt with no documentation\n- AI relies on general knowledge about Stripe\n- Results in hallucinations (wrong fields, wrong endpoints, wrong auth)\n\n**Good approach (with citations):**\n1. Load documentation from actual files: `docs/stripe-api-guide.md`, `docs/stripe-authentication.md`\n2. Structure using XML tags: `<documents>`, `<document>`, `<source>`, `<document_content>`\n3. Request quote extraction in `<quotes>` tags first\n4. AI implements using ONLY the quoted information\n\n**What you'll learn:** See programmatic validation detect hallucinations in the bad response, then watch them disappear with proper citations!"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# API Documentation\n",
-    "api_docs = \"\"\"\n",
-    "User API v2.0\n",
-    "GET /api/users/{id} - Requires authentication header 'X-API-Key'\n",
-    "POST /api/users - Creates user, requires fields: email (validated), username (3-20 chars), password (min 8 chars with special char)\n",
-    "Rate limit: 100 requests/minute, returns 429 if exceeded\n",
-    "All responses return JSON with 'status' and 'data' fields\n",
-    "Error codes: 400 (validation), 401 (auth), 404 (not found), 429 (rate limit)\n",
-    "\"\"\"\n",
-    "\n",
-    "# ❌ BAD: Direct request (may hallucinate details)\n",
-    "bad_messages = [{\"role\": \"user\", \"content\": f\"{api_docs}\\n\\nImplement a Python function to create a new user.\"}]\n",
-    "bad_response = get_chat_completion(bad_messages)\n",
-    "print(\"=\" * 70)\n",
-    "print(\"WITHOUT CITATIONS:\")\n",
-    "print(\"=\" * 70)\n",
-    "print(bad_response)\n",
-    "print(\"\\n\")\n",
-    "\n",
-    "# ✅ YOUR TURN: Request quotes first, then implement\n",
-    "# TODO: Uncomment and complete\n",
-    "# good_messages = [{\n",
-    "#     \"role\": \"user\",\n",
-    "#     \"content\": f\"\"\"<document>{api_docs}</document>\n",
-    "# \n",
-    "# Task: Implement Python function to create a new user.\n",
-    "# \n",
-    "# First, extract relevant quotes about:\n",
-    "# 1. The endpoint and method\n",
-    "# 2. Required fields and validation rules\n",
-    "# 3. Error handling\n",
-    "# \n",
-    "# Put quotes in <quotes> tags, then provide implementation in <code> tags.\"\"\"\n",
-    "# }]\n",
-    "# good_response = get_chat_completion(good_messages)\n",
-    "# print(\"=\" * 70)\n",
-    "# print(\"WITH CITATIONS:\")\n",
-    "# print(\"=\" * 70)\n",
-    "# print(good_response)\n",
-    "# print(\"\\n💡 Citations ensure accuracy and prevent hallucinated API details!\")"
-   ]
+   "source": "# Load Payment API Documentation from actual files\nwith open('docs/stripe-api-guide.md', 'r') as f:\n    api_guide = f.read()\n\nwith open('docs/stripe-authentication.md', 'r') as f:\n    authentication_guide = f.read()\n\n# Helper function to validate responses against documentation\ndef validate_response(response, label):\n    \"\"\"Check if response matches documentation (detects hallucinations)\"\"\"\n    required_fields = [\"amount\", \"currency\", \"payment_method\"]\n    endpoint = \"/v1/payment_intents\"\n    \n    print(f\"\\n{'='*70}\")\n    print(f\"🔍 HALLUCINATION CHECK - {label}:\")\n    print('='*70)\n    \n    # Check key requirements\n    checks = {\n        \"Has required fields (amount, currency, payment_method)\": all(field in response.lower() for field in required_fields),\n        \"Uses correct endpoint /v1/payment_intents\": endpoint in response,\n        \"Uses Bearer token authentication\": \"bearer\" in response.lower(),\n    }\n    \n    print(\"\\nValidating against documentation:\")\n    for check, passed in checks.items():\n        print(f\"  {'✅' if passed else '❌'} {check}\")\n    \n    # Detect common hallucinations\n    hallucinations = []\n    if any(field in response.lower() for field in [\"customer_name\", \"card_number\", \"stripe_key\", \"api_secret\"]):\n        hallucinations.append(\"Invents fields not in docs\")\n    if \"x-api-key\" in response.lower() or (\"api key\" in response.lower() and \"bearer\" not in response.lower()):\n        hallucinations.append(\"Wrong authentication method\")\n    \n    if hallucinations:\n        print(f\"\\n⚠️  Hallucinations detected: {', '.join(hallucinations)}\")\n        return len(hallucinations)\n    else:\n        print(\"\\n✅ No hallucinations detected!\")\n        return 0\n\n# ❌ BAD: Vague request without structured citations\nbad_messages = [{\n    \"role\": \"user\",\n    \"content\": \"\"\"Create a Python function to process Stripe payments. \n    \nThe function should:\n- Accept payment details like amount, card info, customer details\n- Handle authentication with Stripe API\n- Return the payment status\n\nMake it production-ready with proper error handling.\"\"\"\n}]\n\nprint(\"=\"*70)\nprint(\"WITHOUT REFERENCE CITATIONS:\")\nprint(\"=\"*70)\nbad_response = get_chat_completion(bad_messages)\nprint(bad_response)\nbad_count = validate_response(bad_response, \"WITHOUT CITATIONS\")\n\nprint(\"\\n\" + \"=\"*70 + \"\\n\")\n\n# ✅ YOUR TURN: Use multi-document XML structure with quote extraction\n# TODO: Uncomment and complete\n# good_messages = [{\n#     \"role\": \"user\",\n#     \"content\": f\"\"\"<documents>\n#   <document index=\"1\">\n#     <source>docs/stripe-api-guide.md</source>\n#     <document_content>\n#       {api_guide}\n#     </document_content>\n#   </document>\n#   \n#   <document index=\"2\">\n#     <source>docs/stripe-authentication.md</source>\n#     <document_content>\n#       {authentication_guide}\n#     </document_content>\n#   </document>\n# </documents>\n# \n# Task: Create a Python function to process Stripe payments.\n# \n# The function should:\n# - Accept payment details like amount, card info, customer details\n# - Handle authentication with Stripe API\n# - Return the payment status\n# \n# Make it production-ready with proper error handling.\n# \n# Step 1: Extract relevant quotes from the documentation above.\n# In <quotes> tags, extract:\n# - Required API fields from document 1\n# - Authentication format from document 2\n# - Correct endpoint from document 1\n# \n# Step 2: Using ONLY the quoted information, provide implementation in <code> tags.\"\"\"\n# }]\n# \n# print(\"=\"*70)\n# print(\"WITH REFERENCE CITATIONS:\")\n# print(\"=\"*70)\n# good_response = get_chat_completion(good_messages)\n# print(good_response)\n# good_count = validate_response(good_response, \"WITH CITATIONS\")\n# \n# # Show comparison\n# print(f\"\\n{'='*70}\")\n# print(\"📊 COMPARISON:\")\n# print('='*70)\n# print(f\"Without citations: {bad_count} hallucination(s) ⚠️\")\n# print(f\"With citations: {good_count} hallucination(s) ✅\")\n# print(\"\\n💡 Without documentation, AI invents plausible but incorrect details!\")\n# print(\"   With citations, AI stays grounded in actual API requirements.\")"
   },
   {
    "cell_type": "markdown",
@@ -3221,7 +3230,7 @@
     "#     \"content\": \"\"\"You are a code generator. Process:\n",
     "# 1. In <thinking> tags: Plan the solution, consider edge cases\n",
     "# 2. In <output> tags: Provide only the final, clean code\n",
-    "# \n",
+    "\n",
     "# Users see only <output>. Keep thinking internal.\"\"\"\n",
     "#     },\n",
     "#     {\n",
@@ -3230,7 +3239,7 @@
     "#     }\n",
     "# ]\n",
     "# good_response = get_chat_completion(good_messages)\n",
-    "# \n",
+    "\n",
     "# # Extract clean output for user\n",
     "# import re\n",
     "# output_match = re.search(r'<output>(.*?)</output>', good_response, re.DOTALL)\n",
@@ -3240,13 +3249,13 @@
     "#     print(\"CLEAN OUTPUT (What user sees):\")\n",
     "#     print(\"=\" * 70)\n",
     "#     print(clean_output)\n",
-    "#     \n",
+    "    \n",
     "#     # Thinking is logged but not shown to user\n",
     "#     thinking_match = re.search(r'<thinking>(.*?)</thinking>', good_response, re.DOTALL)\n",
     "#     if thinking_match:\n",
     "#         print(\"\\n[Logged internally for debugging]:\")\n",
     "#         print(thinking_match.group(1).strip()[:200] + \"...\")\n",
-    "# \n",
+    "\n",
     "# print(\"\\n💡 Users get clean code, you keep the reasoning for debugging!\")"
    ]
   },
